Bug 78907 - FILESAVE: LO crashes while saving DOCX file containing table in footer
Summary: FILESAVE: LO crashes while saving DOCX file containing table in footer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: All All
: medium normal
Assignee: Priyanka Gaikwad
URL:
Whiteboard: target:4.4.0 target:4.3.3 target:6.2....
Keywords:
: 82895 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-19 12:20 UTC by Priyanka Gaikwad
Modified: 2018-07-25 08:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Docx file contain table in footer (40.42 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 12:20 UTC, Priyanka Gaikwad
Details
Docx file contain table in footer (40.42 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 12:21 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-05-19 12:20:05 UTC
Created attachment 99333 [details]
Docx file contain table in footer

Steps to reproduce :

1) Open attached file on latest LO build.
2) Save file as .docx after loading.

Current behaviour:
File gets crashed while saving.

Expected behaviour :
LO should save file properly.
Comment 1 Priyanka Gaikwad 2014-05-19 12:21:10 UTC Comment hidden (no-value)
Comment 2 Andras Timar 2014-05-19 14:50:51 UTC
Confirmed with 4.1.6.2.
Comment 3 Commit Notification 2014-06-04 08:05:46 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2df0d9d32d05f08ccf673fd0f61f650438511acb

fdo#78907 : File crashed while saving.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2014-10-01 12:56:15 UTC
*** Bug 82895 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2014-10-01 12:57:57 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e41b9b6e3da0b29f213df7745ac286bcbab6270&h=libreoffice-4-3

fdo#78907 fdo#82895 : File crashed while saving.


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-07-13 09:03:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0e2dbca5164c494a669bd48f8ff058f4c1ad710

tdf#118702: partially revert the fix for tdf#78907

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-07-16 10:06:37 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7196aa63832c9d7fe59b31f98cd64696795d2841&h=libreoffice-6-1

tdf#118702: partially revert the fix for tdf#78907

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2018-07-18 15:27:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ded5c0dd0f8146f7b6b77b43114458259d72d6d3&h=libreoffice-6-0

tdf#118702: partially revert the fix for tdf#78907

It will be available in 6.0.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-07-25 08:17:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-0-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bedfe49492a9a5bdca1da46feb813ba5ed130720&h=libreoffice-6-0-6

tdf#118702: partially revert the fix for tdf#78907

It will be available in 6.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.